# rCore

./: .gitignore  README.md
.cargo/: config
easy-fs-fuse/src/: main.rs
easy-fs/src/: block_cache.rs  efs.rs  layout.rs  vfs.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  link_app.S  loader.rs  main.rs  sbi.rs  timer.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/fs/: inode.rs  mail.rs  mod.rs  pipe.rs  stdio.rs
os/src/memory/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mem.rs  mod.rs  process.rs
os/src/task/: context.rs  mail.rs  manager.rs  mod.rs  pid.rs  processor.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
reports/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
user/: Cargo.toml  Makefile  build.py
user/.cargo/: config
user/src/: console.rs  lib.rs  syscall.rs
