[package]
name = "os"
version = "0.1.0"
authors = ["罗境佳 <luojj18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.7.0"
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
riscv = { git = "https://gitee.com/chyyuu/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
board_qemu = []
board_k210 = []
