[package]
name = "os"
version = "0.1.0"
authors = ["罗境佳 <luojj18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
buddy_system_allocator = "0.6"
easy-fs = { path = "../easy-fs" }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }

[features]
board_qemu = []
board_k210 = []
