[package]
name = "user-lib"
version = "0.1.0"
authors = ["deathwish5 <zyr16@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.9"
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"] }
